--- a/.github/actions/upload-artifact/action.yml
+++ b/.github/actions/upload-artifact/action.yml
@@ -1,17 +1,25 @@
 name: Upload GodotSteam artifact
-description: Upload the GodotSteam artifact.
+
+
+description: Upload the GodotSteam artifact
+
+
 inputs:
   name:
-    description: The artifact name.
+    description: The artifact name
     default: "${{ github.job }}"
+
   path:
-    description: The path to upload.
+    description: The path to upload
     required: true
-    default: "bin"
+    default: "./bin/"
+
+
 runs:
   using: "composite"
+
   steps:
-    - name: Upload GodotSteam Artifact
+    - name: Upload GodotSteam Server Artifact
       uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.name }}
