--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-LICENSE.txt export-ignore
-README.md export-ignore
+# Normalize EOL for all files that Git considers text files.
+* text=auto eol=lf
+
+# Only include the addons folder when downloading from the Asset Library.
+/**        export-ignore
+/addons    !export-ignore
+/addons/** !export-ignore
