--- a/.github/workflows/create-bundle-templates.yml
+++ b/.github/workflows/create-bundle-templates.yml
@@ -63,16 +63,16 @@ jobs:
           path: files
 
       # Linux templates and Steam redistributable
-      - name: Download Linux ${{ inputs.is_mono && 'Mono ' || '' }}Release Template
+      - name: Download Linux Release Template
         uses: actions/download-artifact@v4
         with:
-          name: linux-${{ inputs.is_mono && 'mono-' || '' }}release-template
+          name: linux-release-template
           path: files
 
-      - name: Download Linux ${{ inputs.is_mono && 'Mono ' || '' }}Debug Template
+      - name: Download Linux Debug Template
         uses: actions/download-artifact@v4
         with:
-          name: linux-${{ inputs.is_mono && 'mono-' || '' }}debug-template
+          name: linux-debug-template
           path: files
 
       - name: Download Linux Steam Redistributable
@@ -82,16 +82,16 @@ jobs:
           path: files
 
       # Server templates and Steam redistributable
-      - name: Download Server ${{ inputs.is_mono && 'Mono ' || '' }}Release Template
+      - name: Download Server Release Template
         uses: actions/download-artifact@v4
         with:
-          name: linux-server-${{ inputs.is_mono && 'mono-' || '' }}release-template
+          name: server-release-template
           path: files
 
-      - name: Download Server ${{ inputs.is_mono && 'Mono ' || '' }}Debug Template
+      - name: Download Server Debug Template
         uses: actions/download-artifact@v4
         with:
-          name: linux-server-${{ inputs.is_mono && 'mono-' || '' }}debug-template
+          name: server-debug-template
           path: files
 
       - name: Download Linux Steam Redistributable
@@ -101,18 +101,18 @@ jobs:
           path: files
 
       # Mac templates
-      - name: Download MacOS ${{ inputs.is_mono && 'Mono ' || '' }}Template App
+      - name: Download MacOS Template App
         uses: actions/download-artifact@v4
         with:
           name: macos${{ inputs.is_mono && '-mono' || '' }}-template-app
           path: files
 
-      - name: Create ${{ inputs.is_mono && 'Mono ' || '' }}Template Bundle
+      - name: Create Template Bundle
         run: |
-          zip -j godotsteam-${{ inputs.zip_tag }}-${{ inputs.is_mono && 'mono-' || '' }}templates.zip files/*
+          zip -j godotsteam-${{ inputs.zip_tag }}-templates.zip files/*
       
-      - name: Upload ${{ inputs.is_mono && 'Mono ' || '' }}Template Bundle Artifact
+      - name: Upload Template Bundle Artifact
         uses: ./.github/actions/upload-artifact
         with:
-          name: godotsteam-${{ inputs.zip_tag }}-${{ inputs.is_mono && 'mono-' || '' }}templates.zip
-          path: godotsteam-${{ inputs.zip_tag }}-${{ inputs.is_mono && 'mono-' || '' }}templates.zip
+          name: godotsteam-${{ inputs.zip_tag }}-templates.zip
+          path: godotsteam-${{ inputs.zip_tag }}-templates.zip
